[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/lock_open_FILL0_wght400_GRAD0_opsz48.png" type="Texture" id=1]
[ext_resource path="res://navigation/in-game-menu/LockMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[node name="LockMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 54.0
mouse_filter = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 54.0
icon = ExtResource( 1 )
flat = true

[node name="LockView" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="LockView"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
custom_fonts/normal_font = SubResource( 1 )

[node name="Label" type="Label" parent="LockView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
valign = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="LockView" to="." method="_on_TextureRect_gui_input"]
